# git_playground

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yml  main.py  manifest.json  pyproject.toml
.github/workflows/: ci.yml  doc.yml  main.yml
docs/source/: conf.py  index.rst
docs/source/_templates/: module.rst.jinja
docs/source/api/: modules.rst
playground/: RNN.ipynb
site/source/api/src/: src.core.rst  src.rst
src/: core.py  profiler.py  tracker.py
src/dataops/: resampling.py
src/models/: initialization.py
tests/: test_core.py
utils/: opts.py  torch_setup.py
