[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git_playbook"
version = "1.1.0"
description = "git playbook"
readme = "README.md"
requires-python = ">= 3.10.9"
license = { file = "LICENSE" }
authors = [{ name = "Ankit Shrivastava" }]
keywords = [""]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "matplotlib",
  "jupyterlab",
  "pytest",
  "pytest-cov",
] # Add your pip package dependencies here

[project.scripts]
install-torch = "utils.torch_setup:install_torch_according_to_hardware"

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "nbsphinx",
  "myst-parser",
  "sphinx-last-updated-by-git",
  "sphinx-autodoc-typehints",
]
dev = [
  # --- Linting & Formatting ---
  "black==24.10.0",
  "isort==5.13.2",
  "flake8==7.1.1",
  "flake8-bugbear==24.12.12",
  "flake8-docstrings==1.7.0",
  "pylint==3.3.1",
  "mypy==1.13.0",
  "pre-commit",

  # --- Debugging / REPL / Notebook ---
  "ipython==8.29.0",
  "ipykernel==6.29.5",
  "ipdb==0.13.13",
  "debugpy==1.8.7",

  # --- Profilers ---
  "line_profiler==4.1.3",
  "memory_profiler",
  "scalene==1.5.33.1",
]

# -------------------------
# mypy
# -------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "skip"
warn_unused_configs = true
warn_redundant_casts = false
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = false


# -------------------------
# Black (formatter)
# -------------------------
[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''

# -------------------------
# isort (imports)
# -------------------------
[tool.isort]
profile = "black"
line_length = 100
src_paths = ["."]
skip = [".venv", "venv", ".env", "env", ".virtualenv", ".virtualenv/*"]
known_first_party = ["mlops_playground"]

# -------------------------
# flake8
# -------------------------
[tool.flake8]
max-line-length = 100

# -------------------------
# pytest configuration
# -------------------------
[tool.pytest.ini_options]
minversion = "6.0"

addopts = [
  "-v",
  "-ra",                # show summary for skipped/xfail
  "--strict-markers",   # avoid typos in markers
  "--disable-warnings", # cleaner output unless debugging
  # "--cov=src",
  # "--cov-report=term-missing",
]

testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
markers = ["slow: slow tests", "integration: integration tests"]

# -------------------------
# Coverage (pytest-cov)
# -------------------------
# [tool.coverage.run]
# branch = true
# source = ["src"]

# [tool.coverage.report]
# show_missing = true
# skip_covered = true
# precision = 1

# -------------------------
# setuptools: package discovery
# -------------------------

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pylint.'MASTER']
init-hook = 'import sys; sys.path.insert(0, "src")'
